# eaudyseedelespace

./: Calcul de l'impulsion par la méthode des trapèzes  Code_Bernouilli  Code_bernouilli  Résolution Numérique  Résolution numérique  agents.md  code a verifier  main.py  main_2_bernoulli  pyproject.toml  Équations de la Dynamique d'une fusée à eau
