[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fusee-simulation"
version = "0.1.0"
description = "Simulation d'une fusée à eau utilisant la méthode d'Euler explicite"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Anita", email = "anita@example.com"}
]

dependencies = [
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools]
packages = [""]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
